fixes
- Fixed download zip

- Use note&notebook prefixes for downloads

- Nicer scrollbar style

--- a/src/note_mark/static/style.css
+++ b/src/note_mark/static/style.css
@@ -28,20 +28,21 @@
     }
 }
 
-body::-webkit-scrollbar {
-    width: 6px;
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
     background-color: var(--bg-body);
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: #4b4b4b;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background-color: #353535;
 }
 
-body::-webkit-scrollbar-thumb:active {
+::-webkit-scrollbar-thumb:active {
     background-color: black;
 }
 
